# databricks-ai-bridge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  PR_DESCRIPTION.md  README.md  TRACE_ID_IMPLEMENTATION_PLAN.md  demo_filter_example.py  demo_filter_schema.py  demo_langchain_filter.py  for-each-project  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/commands/: integration-tests.md  pr-review.md
.claude/skills/: integration-tests.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ai-sdk-provider.yml  appkit-agent.yml  chat-ui.yml  databricks-ai-bridge-release.yml  databricks-dspy-release.yml  generate_release_workflows.py  langchain-ts.yml  langchainjs.yml  main.yml  release-ai-sdk-provider.yml  release-appkit-agent.yml  release-chat-ui.yml  release-databricks-ai-bridge.yml  release-databricks-langchain.yml  release-databricks-llamaindex.yml  release-databricks-mcp.yml  release-databricks-openai.yml  release-langchainjs.yml  ty.yml
databricks_mcp/: pyproject.toml  test_agent.py
databricks_mcp/src/databricks_mcp/: external_client.py  mcp.py  oauth_provider.py
databricks_mcp/tests/integration_tests/: conftest.py  test_mcp_client.py  test_mcp_core.py  test_mcp_genie.py  test_mcp_resources.py  test_mcp_vector_search.py
databricks_mcp/tests/unit_tests/: test_connector.py  test_mcp.py  test_oauth_provider.py
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
integrations/ai-sdk-provider/: .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  NOTICE  README.md  TRACE_ID_SUPPORT.md  package-lock.json  package.json  test-debug-request.mjs  test-debug-stream-chunks.mjs  test-live-endpoint-simple.mjs  test-live-endpoint.ts  tsconfig.json  tsdown.config.ts  vitest.config.ts
integrations/appkit-agent/: README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tailwind.chat-ui.config.js  tsconfig.json  tsdown.config.ts
integrations/chat-ui/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsdown.config.ts
integrations/dspy/: pyproject.toml
integrations/dspy/src/databricks_dspy/: __init__.py
integrations/dspy/src/databricks_dspy/adapters/: __init__.py
integrations/dspy/src/databricks_dspy/adapters/types/: citation.py  document.py
integrations/dspy/src/databricks_dspy/clients/: databricks_lm.py
integrations/dspy/src/databricks_dspy/retrievers/: databricks_rm.py
integrations/dspy/src/databricks_dspy/streaming/: __init__.py  streaming_listener.py
integrations/dspy/tests/integration_tests/: test_databricks_integration.py
integrations/dspy/tests/unit_tests/adapters/types/: test_citation.py  test_document.py
integrations/dspy/tests/unit_tests/retrievers/: test_databricks_rm.py
integrations/dspy/tests/unit_tests/streaming/: test_streaming.py
integrations/google-adk/: README.md  pyproject.toml
integrations/google-adk/src/databricks_google_adk/: __init__.py  deployment.py  genie.py  mcp.py  toolset.py  vector_search_retriever_tool.py
integrations/google-adk/tests/unit_tests/: test_deployment.py  test_genie.py  test_mcp.py  test_toolset.py  test_vector_search_retriever_tool.py
integrations/langchain/: README.md  chat_openai_reference_implementation.py  pyproject.toml
integrations/langchain-js/: .env.example  README.md  package-lock.json  package.json  tsdown.config.ts  vitest.config.int.ts  vitest.config.ts
integrations/langchain-ts/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  databricks-ai-sdk-provider-0.1.0.tgz  eslint.config.ts  package-lock.json  package.json  tsconfig.json  tsdown.config.ts  vitest.config.int.ts
integrations/langchain/src/databricks_langchain/: __init__.py  chat_agent_langchain.py  chat_agent_langgraph.py  chat_models.py  checkpoint.py  checkpointing.py  embeddings.py  genie.py  multi_server_mcp_client.py  store.py  uc_volume_tool.py  utils.py  vector_search.py  vector_search_retriever_tool.py  vectorstores.py
integrations/langchain/src/databricks_langchain/uc_ai/: __init__.py
integrations/langchain/tests/: conftest.py  test_chat_models.py  test_embeddings.py  test_genie.py  test_vectorstores.py
integrations/langchain/tests/integration_tests/: agent.py  test_chat_models.py  test_fmapi_tool_calling.py  test_langchain_genie.py  test_langchain_lakebase.py  test_langchain_mcp.py  test_langchain_vectorsearch.py  test_vectorstore.py
integrations/langchain/tests/unit_tests/: test_chat_models.py  test_checkpoint.py  test_checkpointing.py  test_embeddings.py  test_genie.py  test_imports.py  test_multi_server_mcp_client.py  test_store.py  test_uc_volume_tool.py  test_utils.py  test_vector_search_retriever_tool.py  test_vectorstores.py  test_vs_retriever_tool_client_args.py
integrations/langchain/tests/utils/: chat_models.py  vector_search.py
integrations/langchainjs/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  eslint.config.ts  package-lock.json  package.json  vitest.config.ts
integrations/llamaindex/: pyproject.toml
integrations/llamaindex/src/databricks_llamaindex/: __init__.py  vector_search_retriever_tool.py
integrations/llamaindex/tests/unit_tests/: test_vector_search_retriever_tool.py
integrations/openai/: README.md  pyproject.toml
mcp/: pyproject.toml
scripts/: setup_genie_test_resources.py
src/databricks_ai_bridge/: __init__.py  _compat.py  chat_models.py  external_tool_request.py  genie.py  lakebase.py  lakebase_checkpointer.py  model_serving_obo_credential_strategy.py  tool_repair.py  uc_volume_tool.py  utils.py  vector_search.py  vector_search_retriever_tool.py
tests/: README.md
tests/databricks_ai_bridge/: test_external_tool_request.py  test_genie.py  test_lakebase.py  test_lakebase_integration.py  test_long_running_db.py  test_long_running_server.py  (+3 more)
tests/integration_tests/obo/app_fixture/: pyproject.toml
tests/integration_tests/obo/app_fixture/agent_server/: agent.py  start_server.py  utils.py
tests/integration_tests/obo/app_fixture/scripts/: start_app.py
(+333 files in other folders)
