[project]
name = "databricks-mcp"
version = "0.6.0.dev0"
description = "MCP helpers for Databricks"
authors = [
    { name="Databricks", email="agent-feedback@databricks.com" },
]
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.13.0",
    "databricks-sdk>=0.49.0",
    "databricks-ai-bridge>=0.4.2",
    "mlflow>=3.1"
]

[dependency-groups]
dev = [
  "typing_extensions>=4.15.0",
  "databricks-sdk>=0.49.0",
  "ruff==0.6.4",
  { include-group = "tests" }
]

tests = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-timeout>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
databricks-ai-bridge = { path = "../", editable = true }

[tool.hatch.build]
include = [
  "src/databricks_mcp/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_mcp"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TCH004",
  # import rules
  "TID251",
  # undefined-local-with-import-star
  "F403",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::Warning",
    "default::Warning:databricks_mcp",
    "default::Warning:tests",
]
