[project]
name = "databricks-dspy"
version = "0.0.1.dev0"
description = "Databricks integration for DSPy"
authors = [
    { name="Databricks", email="agent-feedback@databricks.com" },
]
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "dspy>=2.6.27",
    "databricks-sdk>=0.58.0",
    "mlflow>=3.0.0",
]

[dependency-groups]
dev = [
  "ruff",
  "ty>=0.0.11",
  { include-group = "tests" },
]
tests = [
  "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
databricks-ai-bridge = { path = "../../", editable = true }

[tool.hatch.build]
include = [
  "src/databricks_dspy/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_dspy"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
extend = "../../pyproject.toml"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::Warning",
    "default::Warning:databricks_dspy",
    "default::Warning:tests",
]

[tool.ty.environment]
root = ["./src", "./tests"]

[tool.ty.src]
include = ["./src", "./tests"]
