[project]
name = "databricks-langchain"
version = "1.0.0.dev0"
description = "Support for Databricks AI support in LangChain"
authors = [
    { name="Databricks", email="agent-feedback@databricks.com" },
]
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.0",
    "databricks-vectorsearch>=0.50",
    "databricks-ai-bridge>=0.4.2",
    "mlflow>=2.20.1",
    "pydantic>2.10.0",
    "unitycatalog-langchain[databricks]>=0.3.0",
    "databricks-sdk>=0.65.0",
    "openai>=1.99.9",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "typing_extensions",
  "ruff==0.6.4",
]

integration = [
  "langgraph>=0.2.27",
  "pytest-timeout>=2.3.1",
  "pytest-asyncio",
  "anyio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/databricks_langchain/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_langchain"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TCH004",
  # import rules
  "TID251",
  # undefined-local-with-import-star
  "F403",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
