[project]
name = "databricks-llamaindex"
version = "0.1.1.dev0"
description = "Support for Databricks AI support in LlamaIndex"
authors = [
    { name="Leon Bi", email="leon.bi@databricks.com" },
]
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "databricks-vectorsearch>=0.40",
    "databricks-ai-bridge>=0.1.0",
    "llama-index>=0.12.0",
    "unitycatalog-llamaindex[databricks]>=0.2.0",
]

[dependency-groups]
dev = [
    "typing_extensions>=4.15.0",
    "databricks-sdk>=0.34.0",
    "ruff==0.12.10",
    "ty>=0.0.11",
    { include-group = "tests" },
]

tests = [
    "pytest>=9.0.0",
    "pytest-timeout>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
databricks-ai-bridge = { path = "../../", editable = true }

[tool.hatch.build]
include = [
    "src/databricks_llamaindex/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_llamaindex"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::Warning",
    "default::Warning:databricks_llamaindex",
    "default::Warning:tests",
]

[tool.ty.environment]
root = ["./src", "./tests"]

[tool.ty.src]
include = ["./src", "./tests"]
