[project]
name = "agent-obo-test"
version = "0.1.0"
description = "Minimal OBO test agent for databricks-ai-bridge integration tests"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "databricks-openai>=0.9.0",
    "databricks-agents",
    "mlflow>=3.9.0",
    "openai-agents>=0.4.1",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
